refactor: improve